--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ mod_id=yetanotherzombieenhancement
 # The human-readable display name for the mod.
 mod_name=Yet Another Zombie Enhancement
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -38,6 +38,6 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=me.forever17.yetanotherzombieenhancement
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=Insulin
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=A highly customizable mod for Minecraft that provides high-quality zombie enemies.
